# clunk

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README  SConscript  SConstruct  TODO  audio_spec.h  buffer.cpp  buffer.h  clunk-mdct.cpp  clunk.h  clunk_c.cpp  clunk_c.h  clunk_ex.cpp  clunk_ex.h  context.cpp  context.h  distance_model.cpp  distance_model.h  export_clunk.h  fft_context.h  kemar.h  locker.h  logger.cpp  logger.h  mdct_context.h  mixer.h  object.cpp  object.h  resample.h  resources.rc  sample.cpp  sample.h  sdl_ex.cpp  sdl_ex.h  source.cpp  source.h  sse_fft_context.cpp  (+6 more)
backend/sdl/: backend.cpp  backend.h  locker.h  sdl_ex.cpp  sdl_ex.h
clunk/: abstract_source.h  audio_spec.h  buffer.cpp  buffer.h  clunk.h  clunk_assert.h  clunk_c.cpp  clunk_c.h  clunk_ex.cpp  clunk_ex.h  config.h.in  context.cpp  context.h  distance_model.cpp  distance_model.h  export_clunk.h  fft_context.h  hrtf.cpp  hrtf.h  kemar.c  kemar.h  locker.h  logger.cpp  logger.h  mdct_context.h  mixer.h  object.cpp  object.h  ref_mdct_context.h  resample.h  resources.rc  sample.cpp  sample.h  source.cpp  source.h  sse_fft_context.cpp  sse_fft_context.h  stream.cpp  stream.h  types.h  (+4 more)
clunk/backend/sdl/: backend.cpp  backend.h  locker.h  sdl_ex.cpp  sdl_ex.h
contrib/: make-snapshot  ogg_stream.cpp  ogg_stream.h
kemar/: import.py
kiss/: clunk_simd_hacks.h  kiss_fft.cpp  kiss_fft.h  kiss_fftr.cpp
vs2003/: clunk.sln  clunk.vcproj
vs2005/: clunk.sln  clunk.vcproj
